add missing bottom ctas to blog post template

--- a/templates/node--blog-post--full.html.twig
+++ b/templates/node--blog-post--full.html.twig
@@ -60,6 +60,8 @@
 
       {{ content.author_bio}}
 
+      {{ content.field_bottom_ctas }}
+
       {% if content.disqus_shortname %}
       <div class="disqus-wrapper">
         <div id="disqus_thread"></div>
