--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -3,7 +3,7 @@
     {{ content.user_picture }}
     <div class="text-content">
       <h3>{{ content.full_name }}</h3>
-      {{- content|without('full_name', 'user_picture') -}}
+      {{- content|without('full_name', 'user_picture', 'contact_link') -}}
     </div>
   {% endif %}
 </article>
