config updates/improvements

--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -1,4 +1,4 @@
-<article{{ attributes }}>
+<article{{ attributes.addClass('clearfix') }}>
   {% if content %}
     {{ content.user_picture }}
     <div class="text-content">
